alignment and ews letter and logo font fix

--- a/css/style.css
+++ b/css/style.css
@@ -102,3 +102,27 @@ body {
 .social{
   text-align: center;
 }
+.logo{
+    font-family: "Alfa Slab One", cursive;
+    font-size: 4rem;
+    font-weight: 400;
+}
+.logo-t{
+  font-family: "Alfa Slab One", cursive;
+  font-size: 2.5rem;
+  font-weight: 400;
+}
+.nav-link a:hover{
+  color: red;
+}
+.pad{
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-left: 1px;
+  margin-right: 1px;
+}
+ul>li>a:hover{
+  color:green;
+}
